--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["Wilke Schwiedop <wilke.schwiedop.2010w@informatik.h-brs.de>"]
 [dependencies]
 relax = { path = "../librelax/" }
 
+[build-dependencies]
+cbindgen = "^0.6.7"
+
 [lib]
 name = "relafix"
 crate-type = ["staticlib", "cdylib"]
